ctms-commons history
====================

1.1.0
-----

### all

- Update dev env to JRuby 1.6.2 and buildr 1.4.6.

1.0.9
-----

### all

- Improved the descriptive parts of the OSGi metadata for the modules which
  are OSGi bundles.

### web

- Modified WebTools#requestPropertiesToMap to suppress exceptions from
  property accessors.

1.0.8
-----

### core

- Include `catalina.base` on the search path for
  DataSourceSelfDiscoveringPropertiesFactoryBean.  This is more correct
  than `catalina.home`, but the latter is left for backwards compatibility.
  (In most cases they will be the same.)

1.0.7
-----

### suite-authorization

- Change SuiteRoleMembershipLoader#getProvisioningRoleMemberships to
  include scopeable memberships that have no study or site scopes.

1.0.6
-----

### lang

- Support constructor initialization in StaticNowFactory.

### suite-authorization

- Promote to released-module status (last pre-release was 0.5.0).  For
  earlier changes, see suite/authorization/CHANGELOG.prerelease.
- Add `SuiteRoleMembership#toString`.

1.0.5
-----

### core

- Add MoreRestrictions factory for Hibernate criteria.  First feature
  is a version of Hibernate's #in which automatically segments the
  value list for Oracle compatibility.

1.0.4
-----

### all

- Make all external imports optional in OSGi metadata.  This allows
  applications which use ctms-commons to pick-and-choose which
  features to use.

1.0.3
-----

### core

- Add tests for AuditUtil.
- Fix varargs problem in AuditUtil.getObjectId which caused it to
  never return an ID.

1.0.2
-----

### all

- Ensure that non-class resources are properly included in
  bnd-packaged jars.  This affected the web, laf, and
  suite:authorization modules.
- Allow suite:authorization integrated test database connection
  parameters to be specified using a properties file.

1.0.1
-----

### core

- Return build name as BuildInfo#toString.
- Treat OSGi-style .DEV revisions as snapshots in BuildInfo.

### all
