@@ -8,31 +8,46 @@
   </configurations>
 
   <dependencies>
-    <dependency name="ctms-commons-base" rev="latest.integration"/>
-    <dependency name="ctms-commons-lang" rev="latest.integration"/>
+    <dependency name="ctms-commons-base" rev="latest.integration" conf="compile->runtime;%->@"/>
+    <dependency name="ctms-commons-lang" rev="latest.integration" conf="compile->runtime;%->@"/>
 
-    <dependency org="org.hibernate" name="com.springsource.org.hibernate" rev="${lib.hibernate.rev}"/>
-    <dependency org="org.hibernate" name="com.springsource.org.hibernate.annotations" rev="${lib.hibernate-annotations.rev}"/>
-    <dependency org="javax.persistence" name="com.springsource.javax.persistence" rev="1.0.0" />
+    <dependency org="org.hibernate" name="hibernate-core" rev="${lib.hibernate.rev}"/>
+    <dependency org="org.hibernate" name="hibernate-annotations" rev="${lib.hibernate-annotations.rev}"/>
+    <dependency org="javax.persistence" name="persistence-api" rev="1.0" />
 
-    <dependency org="org.springframework" name="org.springframework.beans"        rev="${lib.spring.rev}"/>
-    <dependency org="org.springframework" name="org.springframework.context"      rev="${lib.spring.rev}"/>
-    <dependency org="org.springframework" name="org.springframework.core"         rev="${lib.spring.rev}"/>
-    <dependency org="org.springframework" name="org.springframework.orm"          rev="${lib.spring.rev}" conf="*->hibernate"/>
-    <dependency org="org.springframework" name="org.springframework.transaction"  rev="${lib.spring.rev}"/>
+    <dependency org="org.springframework" name="spring-beans"        rev="${lib.spring.rev}"/>
+    <dependency org="org.springframework" name="spring-context"      rev="${lib.spring.rev}"/>
+    <dependency org="org.springframework" name="spring-core"         rev="${lib.spring.rev}"/>
+    <dependency org="org.springframework" name="spring-orm"          rev="${lib.spring.rev}">
+      <exclude org="org.hibernate"/>
+    </dependency>
+    <dependency org="org.springframework" name="spring-tx"           rev="${lib.spring.rev}"/>
 
     <dependency org="org.slf4j" name="slf4j-api" rev="${lib.slf4j.rev}"/>
     <dependency org="org.slf4j" name="jcl-over-slf4j" rev="${lib.slf4j.rev}"/>
-    <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.lang" rev="${lib.jakarta-commons.lang.rev}"/>
+    <dependency org="commons-lang" name="commons-lang" rev="${lib.jakarta-commons.lang.rev}"/>
     <dependency org="net.sourceforge.collections" name="collections-generic" rev="${lib.generic-commons-collections.rev}"/>
-    <dependency org="org.apache.ant" name="com.springsource.org.apache.tools.ant" rev="1.7.1" />
+    <dependency org="org.apache.ant" name="ant" rev="1.7.1" />
 
     <!-- TEST -->
-    <dependency name="ctms-commons-testing-unit" rev="latest.integration" conf="unit-test->runtime"/>
+    <dependency name="ctms-commons-testing-unit" rev="latest.integration" conf="unit-test->*"/>
     <dependency org="org.slf4j" name="slf4j-simple" rev="${lib.slf4j.rev}" conf="unit-test->default"/>
-    <dependency org="org.hsqldb" name="com.springsource.org.hsqldb" rev="${lib.hsqldb.rev}" conf="unit-test->*"/>
+    <dependency org="org.hsqldb" name="hsqldb" rev="${lib.hsqldb.rev}" conf="unit-test->*"/>
 
-    <exclude module="com.springsource.slf4j.api"/>
+    <exclude org="javax.ejb"/>
+    <exclude org="javax.jdo"/>
+    <exclude org="javax.jms"/>
+    <exclude org="javax.resource"/>
+    <exclude org="javax.security"/>
+    <exclude org="ant"/>
+    <exclude org="commons-logging"/>
+    <exclude org="com.bea.wlplatform"/>
+    <exclude org="com.experlog"/>
+    <exclude org="com.oracle"/>
     <exclude org="com.oracle.oc4j"/>
+    <exclude org="com.oracle.toplink"/>
+    <exclude org="jotm"/>
+    <exclude org="log4j"/>
+    <exclude org="org.apache.ibatis"/>
   </dependencies>
 </ivy-module>
