@@ -8,8 +8,8 @@
   </configurations>
 
   <dependencies>
-    <dependency name="ctms-commons-base" rev="latest.integration"/>
+    <dependency name="ctms-commons-base" rev="latest.integration" conf="compile->runtime;%->@"/>
     <dependency org="net.sourceforge.collections" name="collections-generic" rev="${lib.generic-commons-collections.rev}"/>
-    <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.lang" rev="${lib.jakarta-commons.lang.rev}"/>
+    <dependency org="commons-lang" name="commons-lang" rev="${lib.jakarta-commons.lang.rev}"/>
   </dependencies>
 </ivy-module>
